--- a/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/RegistroPiezasDescarte.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/RegistroPiezasDescarte.cshtml
@@ -86,7 +86,7 @@
             <div class="col-md-12 col-sm-12  ">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>@ViewBag.pagina</h2>
+                        <h2>@ViewBag.Title</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             @*Utilizado para mover a la derecha los iconos del card*@
                             <span style="visibility:hidden">_______</span>
@@ -282,9 +282,6 @@
                 </div>
             </div>
         </div>
-
-
-
 
 
         @section Scripts {
